More mappings and some datatables

--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
                             <li><a href="#section-database-documentdb"><span class="lbl">DocumentDB</span></a></li>
                         </ul>
                     </li>
+                    <li class="aquamarine with-sub" data-category="migrationandtransfer">
+                        <span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Migration-and-Transfer_light-bg.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Migration &amp; Transfer</span>
+                        </span>
+                        <ul>
+                            <li><a href="#section-migrationandtransfer-databasemigrationservice"><span class="lbl">Database Migration Service</span></a></li>
+                        </ul>
+                    </li>
                     <li class="purple with-sub" data-category="networkingandcontentdelivery">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Networking-and-Content-Delivery_light-bg.png" style="width: 16px; height: 16px;" /></i>
@@ -411,6 +420,7 @@
                         </ul>
                     </li>
                 </ul>
+                xyz
             </section>
         </nav>
 
@@ -436,7 +446,7 @@
 
                 <section id="section-dashboard" data-section-breadcrumb1-title="Dashboard" data-section-breadcrumb1-link="#section-dashboard" data-section-title="Dashboard" class="former2-section" style="display: none;">
                     <div class="row">
-						<div class="col-md-2">
+						<div class="col-sm-2">
                             <a href="#section-compute-ec2">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -448,7 +458,7 @@
                                 </section>
                             </a>
 						</div>
-						<div class="col-md-2">
+						<div class="col-sm-2">
                             <a href="#section-storage-s3">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -460,7 +470,7 @@
                                 </section>
                             </a>
                         </div>
-						<div class="col-md-2">
+						<div class="col-sm-2">
                             <a href="#section-database-rds">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -472,7 +482,19 @@
                                 </section>
                             </a>
                         </div>
-						<div class="col-md-2">
+						<div class="col-sm-2">
+                            <a href="#section-migrationandtransfer-databasemigrationservice">
+                                <section class="widget widget-simple-sm">
+                                    <div class="widget-simple-sm-icon">
+                                        <img src="img/aws/Migration-and-Transfer_light-bg.png" style="width: 64px; height: 64px;" />
+                                    </div>
+                                    <div class="widget-simple-sm-bottom">
+                                        <a href="#section-migrationandtransfer-databasemigrationservice">Migration &amp; Transfer</a>
+                                    </div>
+                                </section>
+                            </a>
+                        </div>
+						<div class="col-sm-2">
                             <a href="#section-networkingandcontentdelivery-vpc">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -484,7 +506,7 @@
                                 </section>
                             </a>
                         </div>
-						<div class="col-md-2">
+						<div class="col-sm-2">
                             <a href="#section-developertools-codecommit">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -496,7 +518,7 @@
                                 </section>
                             </a>
                         </div>
-						<div class="col-md-2">
+						<div class="col-sm-2">
                             <a href="#section-robotics-robomaker">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -508,9 +530,7 @@
                                 </section>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-managementandgovernance-cloudwatch">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -522,7 +542,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-machinelearning-sagemaker">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -534,7 +554,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-analytics-athena">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -546,7 +566,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-securityidentityandcompliance-iam">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -558,7 +578,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-mobile-appsync">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -570,7 +590,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-applicationintegration-stepfunctions">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -582,9 +602,7 @@
                                 </section>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-awscostmanagement-budgets">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -596,7 +614,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-customerengagement-ses">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -608,7 +626,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-endusercomputing-workspaces">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -620,7 +638,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-internetofthings-core">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -632,7 +650,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-gamedevelopment-gamelift">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
@@ -644,7 +662,7 @@
                                 </section>
                             </a>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-sm-2">
                             <a href="#section-setup-introduction">
                                 <section class="widget widget-simple-sm">
                                     <div class="widget-simple-sm-icon">
