Easy exception handling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <![endif]-->
         <link rel="stylesheet" href="css/separate/elements/steps.min.css">
         <!--<link rel="stylesheet" href="css/lib/bootstrap-table/bootstrap-table.min.css">-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.5/bootstrap-table.min.css">
+        <link rel="stylesheet" href="css/lib/bootstrap-table-updated/bootstrap-table.min.css">
         <link rel="stylesheet" href="css/lib/font-awesome/font-awesome.min.css">
         <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
 
@@ -949,8 +949,8 @@
         <script src="js/lib/bootstrap/bootstrap.min.js"></script>
         <script src="js/ui-plugins.js"></script>
         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.5/bootstrap-table.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.13.5/extensions/export/bootstrap-table-export.min.js"></script>
+        <script src="js/lib/bootstrap-table-updated/bootstrap-table.min.js"></script>
+        <script src="js/lib/bootstrap-table-updated/bootstrap-table-export.min.js"></script>
         
         <script src="js/lib/blockUI/jquery.blockUI.js"></script>
         <script src="js/lib/bootstrap-notify/bootstrap-notify.min.js"></script>
