--- a/index.html
+++ b/index.html
@@ -957,6 +957,8 @@
 
         <script src="js/ui-app.js"></script>
 
+        <script src="js/deepmerge.js"></script>
+
         <script src="aws-sdk-2.412.0.min.js"></script>
 
         <script src="js/mappings.js"></script>
