Add App Mesh datatables

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                             <li><a href="#section-networkingandcontentdelivery-cloudfront"><span class="lbl">CloudFront</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-route53"><span class="lbl">Route 53</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-apigateway"><span class="lbl">API Gateway</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-appmesh"><span class="lbl">App Mesh</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-cloudmap"><span class="lbl">Cloud Map</span></a></li>
                         </ul>
                     </li>
