Fix editor refresh bug

--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                                                     <a href="#section-networkingandcontentdelivery-cloudfront" style="font-weight: 600;">CloudFront</a><br />
                                                     <a href="#section-networkingandcontentdelivery-route53" style="font-weight: 600;">Route 53</a><br />
                                                     <a href="#section-networkingandcontentdelivery-apigateway" style="font-weight: 600;">API Gateway</a><br />
+                                                    <a href="#section-networkingandcontentdelivery-appmesh" style="font-weight: 600;">App Mesh</a><br />
                                                     <a href="#section-networkingandcontentdelivery-cloudmap" style="font-weight: 600;">Cloud Map</a>
                                                 </td>
                                             </tr>
