Finished initial Terraform sweep, starting on Terraform-only categories and services

--- a/index.html
+++ b/index.html
@@ -314,6 +314,17 @@
                             <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
                         </ul>
                     </li>
+                    <li class="gold with-sub" data-category="mediaservices">
+                        <span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Media-Services_light-bg.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Media Services</span>
+                        </span>
+                        <ul>
+                            <li><a href="#section-mediaservices-elastictranscoder"><span class="lbl">Elastic Transcoder</span></a></li>
+                            <li><a href="#section-mediaservices-mediapackage"><span class="lbl">MediaPackage</span></a></li>
+                            <li><a href="#section-mediaservices-mediastore"><span class="lbl">MediaStore</span></a></li>
+                        </ul>
+                    </li>
                     <li class="aquamarine with-sub" data-category="machinelearning">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Machine-Learning_light-bg.png" style="width: 16px; height: 16px;" /></i>
@@ -580,6 +591,20 @@
                                                     <a href="#section-managementandgovernance-opsworks" style="font-weight: 600;">OpsWorks</a><br />
                                                     <a href="#section-managementandgovernance-servicecatalog" style="font-weight: 600;">Service Catalog</a><br />
                                                     <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <table style="border: none; margin-bottom: 16px;">
+                                            <tr>
+                                                <td><img src="img/aws/Media-Services_light-bg.png" style="width: 48px; height: 48px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Media Services</h4></td>
+                                            </tr>
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td style="padding-left: 12px;">
+                                                    <a href="#section-mediaservices-elastictranscoder" style="font-weight: 600;">Elastic Transcoder</a><br />
+                                                    <a href="#section-mediaservices-mediapackage" style="font-weight: 600;">MediaPackage</a><br />
+                                                    <a href="#section-mediaservices-mediastore" style="font-weight: 600;">MediaStore</a><br />
                                                 </td>
                                             </tr>
                                         </table>
