Rework to make Firefox compatible

--- a/index.html
+++ b/index.html
@@ -925,6 +925,10 @@
                     </section>-->
     
                     <section id="search-results" class="faq-page-questions" style="display: none;">
+                        <div id="search-no-scan-warning" class="alert alert-warning" role="alert">
+							<strong><i class="fa fa-warning"></i> Account Not Scanned</strong><br>
+							Search results will be limited to only services you have visited. To search across all services in your account, perform an <a href="#section-setup-settings">account scan</a> and retry your search.
+						</div>
                         <div id="section-search-toolbar" class="f2toolbar">
                             <button class="additems btn btn-primary" data-datatable="section-search-datatable" disabled>
                                 <i class="font-icon font-icon-plus"></i> Add Selected
