--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         <link href="/favicon.ico" rel="shortcut icon">
+        <meta name="description" content="Convert your existing cloud resources into CloudFormation / Terraform / Troposphere" />
+        <meta property="og:title" content="Former2" />
+        <meta property="og:description" content="Convert your existing cloud resources into CloudFormation / Terraform / Troposphere" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://former2.com/" />
+        <meta property="og:image" content="https://former2.com/img/squarelogo.png" />
 
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
