--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
                                     </button>
                                 </div>
                                 <div class="form-group">
-                                    <p>Use the below button to add all scanned resources to the outputs:</p>
+                                    <p>Use the below button to add all scanned resources to the outputs (not recommended):</p>
                                     <button id="add-all-resources" class="btn btn-sm btn-secondary">
                                         <i class="font-icon font-icon-scanner"></i> Add All Resources
                                     </button>
