Added EC2 capacity reservations

--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-mobile-appsync"><span class="lbl">AppSync</span></a></li>
+                            <li><a href="#section-mobile-devicefarm"><span class="lbl">Device Farm</span></a></li>
                         </ul>
                     </li>
                     <li class="pink with-sub" data-category="applicationintegration">
@@ -677,6 +678,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-mobile-appsync" style="font-weight: 600;">AppSync</a>
+                                                    <a href="#section-mobile-devicefarm" style="font-weight: 600;">Device Farm</a>
                                                 </td>
                                             </tr>
                                         </table>
