--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
                             <li><a href="#section-securityidentityandcompliance-inspector"><span class="lbl">Inspector</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-certificatemanager"><span class="lbl">Certificate Manager</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-kms"><span class="lbl">KMS</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-cloudhsm"><span class="lbl">CloudHSM</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-directoryservice"><span class="lbl">Directory Service</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
                         </ul>
@@ -662,6 +663,7 @@
                                                     <a href="#section-securityidentityandcompliance-inspector" style="font-weight: 600;">Inspector</a><br />
                                                     <a href="#section-securityidentityandcompliance-certificatemanager" style="font-weight: 600;">Certificate Manager</a><br />
                                                     <a href="#section-securityidentityandcompliance-kms" style="font-weight: 600;">KMS</a><br />
+                                                    <a href="#section-securityidentityandcompliance-cloudhsm" style="font-weight: 600;">CloudHSM</a><br />
                                                     <a href="#section-securityidentityandcompliance-directoryservice" style="font-weight: 600;">Directory Service</a><br />
                                                     <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a>
                                                 </td>
@@ -677,7 +679,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
-                                                    <a href="#section-mobile-appsync" style="font-weight: 600;">AppSync</a>
+                                                    <a href="#section-mobile-appsync" style="font-weight: 600;">AppSync</a><br />
                                                     <a href="#section-mobile-devicefarm" style="font-weight: 600;">Device Farm</a>
                                                 </td>
                                             </tr>
